# clearphone

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  setup-repo.sh
apps/: core.toml
apps/extras/: free.toml  non-free.toml
clearphone/: __init__.py  cli.py
clearphone/api/: __init__.py  controller.py  events.py
clearphone/core/: __init__.py  adb.py  apps_catalog.py  downloader.py  exceptions.py  installer.py  profile.py  remover.py  workflow.py
device-profiles/: samsung-s24.toml
docs/: phase-one-implementation.md  requirements.md  style-guide.md
tests/: conftest.py
tests/integration/: test_cli.py  test_profile_loading.py
tests/unit/: test_adb.py  test_apps_catalog.py  test_downloader.py  test_events.py  test_exceptions.py  test_profile.py  test_remover.py  test_workflow.py
